Added the FC to the makefile of NE2001.

--- a/pyne2001/NE2001/src/Makefile
+++ b/pyne2001/NE2001/src/Makefile
@@ -5,6 +5,7 @@
 # Then type 'make pgm' to make the NE2001 interface 
 # or        'make lib' to meke the library.
 #
+FC = gfortran
 RANLIB  = ranlib
 ARFLAGS = rc
 FFLAGS  = -O -std=gnu
